organize script names, continue with the clustering analysis, add feature plots for hsc goi

--- a/2023-09_Yang_hsc_seurat4.Rmd
+++ b/2023-09_Yang_hsc_seurat4.Rmd
@@ -9,6 +9,9 @@ output: github_document
 date: '2023-06-22'
 ---
 
+**REPEATED WITH SEURAT 5**
+
+
 <body style="background-color:FloralWhite;">
 
 **Analysis of data obtained with 10X Chromium Fixed RNA Kit, Human Transcriptome.**
